// NOTE: external plugin version is specified in implementation dependency artifact
// of the project's build file, e.g build.gradle
plugins {
    id 'java-library'
    id 'groovy'
    id 'eclipse'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
        // https://github.com/gradle/foojay-toolchains
        vendor = JvmVendorSpec.ADOPTIUM
        implementation = JvmImplementation.VENDOR_SPECIFIC
    }
}

compileJava {
    options.encoding = 'UTF-8'
    options.release = 19
    options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.vector'])
}

compileTestJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
//    testImplementation platform('org.junit:junit-bom:5.10.0')
//    testImplementation 'org.junit.jupiter:junit-jupiter'
    api 'org.slf4j:slf4j-api:1.7.32'
    implementation 'ch.qos.logback:logback-classic:1.5.3'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
}


test {
    useJUnitPlatform()
    testLogging {
        events "PASSED", "FAILED", "SKIPPED"
    }
}

eclipse {
    jdt {
        javaRuntimeName = "JavaSE-17"
    }
}
